// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiCollapsibleNav close button can be hidden 1`] = `
<body
  class="ouiBody--hasFlyout"
  style="padding-left: 0px;"
>
  <div>
    <div>
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="1"
      />
      <div
        data-focus-lock-disabled="false"
      >
        <nav
          class="ouiFlyout ouiFlyout--left ouiFlyout--paddingNone ouiCollapsibleNav"
          id="id"
          style="width: 320px;"
          tabindex="-1"
        >
          <button
            aria-label="Close this dialog"
            class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--fill ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--outside"
            data-test-subj="ouiFlyoutCloseButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiButtonIcon__icon"
              color="inherit"
              data-ouiicon-type="cross"
            />
          </button>
        </nav>
      </div>
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`OuiCollapsibleNav does not render if isOpen is false 1`] = `<div />`;

exports[`OuiCollapsibleNav is rendered 1`] = `
<body
  class="ouiBody--hasFlyout"
>
  <div>
    <div>
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="1"
      />
      <div
        data-focus-lock-disabled="false"
      >
        <nav
          aria-label="aria-label"
          class="ouiFlyout ouiFlyout--left ouiFlyout--paddingNone ouiCollapsibleNav testClass1 testClass2"
          data-test-subj="test subject string"
          id="id"
          style="width: 320px;"
          tabindex="-1"
        >
          <button
            aria-label="Close this dialog"
            class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--fill ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--outside"
            data-test-subj="ouiFlyoutCloseButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiButtonIcon__icon"
              color="inherit"
              data-ouiicon-type="cross"
            />
          </button>
        </nav>
      </div>
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`OuiCollapsibleNav props accepts OuiFlyout props 1`] = `
<body
  class="ouiBody--hasFlyout"
  style="padding-left: 0px;"
>
  <div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        class="ouiFlyout ouiFlyout--left ouiFlyout--paddingNone ouiCollapsibleNav"
        id="id"
        style="width: 240px;"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--fill ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--outside"
          data-test-subj="ouiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="ouiButtonIcon__icon"
            color="inherit"
            data-ouiicon-type="cross"
          />
        </button>
      </nav>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`OuiCollapsibleNav props button 1`] = `
<body
  class="ouiBody--hasFlyout"
  style="padding-left: 0px;"
>
  <div>
    <button
      aria-controls="id"
      aria-expanded="true"
      aria-hidden="true"
      aria-pressed="true"
      data-aria-hidden="true"
    />
    <div>
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="1"
      />
      <div
        data-focus-lock-disabled="false"
      >
        <nav
          class="ouiFlyout ouiFlyout--left ouiFlyout--paddingNone ouiCollapsibleNav"
          id="id"
          style="width: 320px;"
          tabindex="-1"
        >
          <button
            aria-label="Close this dialog"
            class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--fill ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--outside"
            data-test-subj="ouiFlyoutCloseButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiButtonIcon__icon"
              color="inherit"
              data-ouiicon-type="cross"
            />
          </button>
        </nav>
      </div>
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`OuiCollapsibleNav props dockedBreakpoint 1`] = `
<body
  class="ouiBody--hasFlyout"
  style="padding-left: 0px;"
>
  <div>
    <div>
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="1"
      />
      <div
        data-focus-lock-disabled="false"
      >
        <nav
          class="ouiFlyout ouiFlyout--left ouiFlyout--paddingNone ouiCollapsibleNav"
          id="id"
          style="width: 320px;"
          tabindex="-1"
        >
          <button
            aria-label="Close this dialog"
            class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--fill ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--outside"
            data-test-subj="ouiFlyoutCloseButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiButtonIcon__icon"
              color="inherit"
              data-ouiicon-type="cross"
            />
          </button>
        </nav>
      </div>
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`OuiCollapsibleNav props isDocked 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <nav
      class="ouiFlyout ouiFlyout--push ouiFlyout--left ouiFlyout--paddingNone ouiCollapsibleNav"
      id="id"
      style="width: 320px;"
      tabindex="-1"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;

exports[`OuiCollapsibleNav props onClose 1`] = `
<body
  class="ouiBody--hasFlyout"
>
  <div>
    <div>
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="1"
      />
      <div
        data-focus-lock-disabled="false"
      >
        <nav
          class="ouiFlyout ouiFlyout--left ouiFlyout--paddingNone ouiCollapsibleNav"
          id="id"
          style="width: 320px;"
          tabindex="-1"
        >
          <button
            aria-label="Close this dialog"
            class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--fill ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--outside"
            data-test-subj="ouiFlyoutCloseButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiButtonIcon__icon"
              color="inherit"
              data-ouiicon-type="cross"
            />
          </button>
        </nav>
      </div>
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`OuiCollapsibleNav props showButtonIfDocked 1`] = `
<body
  class="ouiBody--hasFlyout"
  style="padding-left: 0px;"
>
  <div>
    <button
      aria-controls="id"
      aria-expanded="true"
      aria-pressed="true"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <nav
        class="ouiFlyout ouiFlyout--push ouiFlyout--left ouiFlyout--paddingNone ouiCollapsibleNav"
        id="id"
        style="width: 320px;"
        tabindex="-1"
      />
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</body>
`;

exports[`OuiCollapsibleNav props size 1`] = `
<body
  class="ouiBody--hasFlyout"
>
  <div>
    <div>
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="1"
      />
      <div
        data-focus-lock-disabled="false"
      >
        <nav
          class="ouiFlyout ouiFlyout--left ouiFlyout--paddingNone ouiCollapsibleNav"
          id="id"
          style="width: 240px;"
          tabindex="-1"
        >
          <button
            aria-label="Close this dialog"
            class="ouiButtonIcon ouiButtonIcon--text ouiButtonIcon--fill ouiButtonIcon--xSmall ouiFlyout__closeButton ouiFlyout__closeButton--outside"
            data-test-subj="ouiFlyoutCloseButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="ouiButtonIcon__icon"
              color="inherit"
              data-ouiicon-type="cross"
            />
          </button>
        </nav>
      </div>
      <div
        aria-hidden="true"
        data-aria-hidden="true"
        data-focus-guard="true"
        style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;
